--- a/main.html
+++ b/main.html
@@ -620,6 +620,7 @@ try@{
 <script src="./Database/asset.js"></script>
 <script src="./Database/HomePage.js"></script>
 <script src="./Database/ApiPage.js"></script>
+<script src="./Database/AboutPage.js"></script>
 <script src="./Database/HelpPage.js"></script>
 <script src="./Database/OpenApiPage.js"></script>
 <script src="./Database/LinkBox.js"></script>
